[package]
name = "bulletproof25519"
version = "0.1.0"
description = "Unaudited, inefficient implementation of bulletproof25519 in Rust"
license = "MIT"
repository = "https://github.com/kayabaNerve/serai"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ed448", "ff", "group"]
edition = "2021"

[dependencies]
lazy_static = "1"

rand_core = "0.6"
digest = "0.10"

zeroize = { version = "1.5", features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

ff = "0.13"
group = "0.13"

generic-array = { version = "0.14", features = ["zeroize"] }
crypto-bigint = { version = "0.5", default-features = false, features = ["zeroize"] }

dalek-ff-group = { path = "../dalek-ff-group", version = "0.3.0" }

[dev-dependencies]
hex-literal = "0.3"
hex = "0.4"
