[package]
name = "curve-trees"
version = "0.1.0"
description = "Curve Trees Implementation"
license = "MIT"
repository = "https://github.com/kayabaNerve/serai/tree/snarks/crypto/curve-trees"
authors = ["Luke Parker <lukeparker5132@gmail.com>"]
keywords = ["ciphersuite", "ff", "group"]
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rand_core = { version = "0.6", features = ["getrandom"] }

zeroize = { version = "^1.5", default-features = false, features = ["zeroize_derive"] }
subtle = { version = "^2.4", default-features = false }

multiexp = { path = "../multiexp", default-features = false }
pasta_curves = { version = "0.5", default-features = false, features = ["bits", "alloc"], git = "https://github.com/kayabaNerve/pasta_curves.git" }

transcript = { package = "flexible-transcript", path = "../transcript", features = ["recommended"] }

ciphersuite = { path = "../ciphersuite", features = ["ristretto", "pasta", "ed25519", "bulletproof25519"] }

ecip = { path = "../ecip", features = ["pasta", "ed25519_tower"] }
bulletproofs-plus = { path = "../bulletproofs-plus", features = ["tests"] }
